tests/analyzer/errors/already_declared.rv
fn main() {
    {
        var loc1 = "local"
        var loc1 = " var"
    }
}